# SemanticSegmentationGUI

./: .gitignore  README.md  _modal_shim.py  local_run.py  local_train_kpconvx_cold.py  local_train_kpconvx_cold_hag.py  local_train_ptv3.py  local_train_ptv3_hag.py  local_train_randlanet.py  local_train_randlanet_hag.py  modal_train_kpconvx_cold.py  modal_train_kpconvx_cold_hag.py  modal_train_ptv3.py  modal_train_ptv3_hag.py  modal_train_randlanet.py  modal_train_randlanet_hag.py  pixi.toml  pyproject.toml  smoke_test.py  train_common.py
.github/workflows/: build-local-images.yml
conda-recipes/: README.md
conda-recipes/trainer-src-concerto/: recipe.yaml
conda-recipes/trainer-src-kpconv/: recipe.yaml
conda-recipes/trainer-src-kpconvx/: recipe.yaml
docker/: README.md  build_all.ps1  build_all.sh  concerto.Dockerfile  kpconv.Dockerfile  kpconv_hag.Dockerfile  kpconvx_cold.Dockerfile  kpconvx_cold_hag.Dockerfile  ptv3.Dockerfile  ptv3_hag.Dockerfile  pull_all.ps1  pull_all.sh  push_all.ps1  push_all.sh  randlanet.Dockerfile  randlanet_hag.Dockerfile  sonata.Dockerfile  utonia.Dockerfile
envs/: pixi.toml
scripts/: DENSITY_DG.md
scripts/helper/: density.py  (+3 more)
tests/: smoke_test.py  test_fix_H_backbones.py  test_fix_a_train_common.py  test_fix_b_kp_trainers.py
tools/: check_env_sync.py  gen_dockerfiles.py  package_weights.py  split_local.py
trainer_gui/: __init__.py  analysis.py  appstate.py  backbones.py  dataset.py  jobs.py  local_cli.py  logconsole.py  main.py  modal_cli.py  palette.py  plots.py  prep.py  pretrain.py  readers.py  theme.py  ui.py  viewer.py
(+38 files in other folders)
